# weather-mcp

./: .gitignore  README.md  pyproject.toml  test_weather.py
src/weather_mcp/: __init__.py  server.py
