[project]
name = "weather-mcp"
version = "0.1.0"
description = "A simple weather MCP server using fastmcp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "httpx>=0.25.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_mcp"]
